prettify and jslint, more tests

--- a/atv-test/app/views/atv/_inter_controller.html.erb
+++ b/atv-test/app/views/atv/_inter_controller.html.erb
@@ -8,8 +8,8 @@
   <input type="number" value="4" data-atv-multiplier-target="factor"></input>
 </div> =
 <div data-atv-controller="adder">
-  <span data-atv-adder-target="sum"></span>
-  <button data-atv-adder-action="click->add">
+  <span id="inter-out" data-atv-adder-target="sum">0</span>
+  <button id="inter-button" data-atv-adder-action="click->add">
     Calculate
   </button>
 </div>              
