--- a/atv-test/app/views/atv/_namespace.html.erb
+++ b/atv-test/app/views/atv/_namespace.html.erb
@@ -13,3 +13,17 @@
 </script>
 
 
+
+<div data-controller="simple">
+  N
+  <button id="nCount" data-simple-action="click">
+    Count 0
+  </button>
+</div>
+
+<script type="module">
+  import { activate } from 'atv';
+
+  activate("");
+</script>
+
