finish first round of test, update version, update README

--- a/atv-test/app/views/atv/_connecting.html.erb
+++ b/atv-test/app/views/atv/_connecting.html.erb
@@ -1,9 +1,6 @@
 
 <div data-atv-controller="connecting">
-  <button data-atv-connecting-action="click">
+  <button class="connect-button" data-atv-connecting-action="click" data-atv-connecting-target="state">
     Create 
   </button>
-  <span data-atv-connecting-target="state">
-    Not yet connected.
-  <span>
 </div>
