--- a/atv-test/app/views/atv/_disconnecting.html.erb
+++ b/atv-test/app/views/atv/_disconnecting.html.erb
@@ -1,6 +1,6 @@
 
 <div data-atv-controller="disconnecting">
-  <button data-atv-disconnecting-action="click">
+  <button id="disconnect-button" data-atv-disconnecting-action="click">
     Disconnect 
   </button>
 </div>
