--- a/atv-test/app/views/atv/_classic.html.erb
+++ b/atv-test/app/views/atv/_classic.html.erb
@@ -1,6 +1,6 @@
 
 <div data-atv-controller="hello">
-  <input id="greet-input" data-atv-hello-target="name" type="text">
+  <input id="greet-input" data-atv_hello_target="name" type="text">
 
   <button id="greet-button" data-atv-hello-action="click->greet">
     Greet
