--- a/atv-test/app/views/atv/_config.html.erb
+++ b/atv-test/app/views/atv/_config.html.erb
@@ -1,9 +1,27 @@
 
 <div data-atv-controller="config" 
       data-atv-config-values='{"answer":"My favorite color is blue!"}'>
-  <button id="config-button" data-atv-config-action="click->reveal">
+  <button id="config-button1" data-atv-config-action="click->reveal">
     Reveal the mystery answer
   </button>
-  <span id="config-out" data-atv-config-target="output">
+  <span id="config-out1" data-atv_config_target="output">
+  </span>
+</div>
+
+<div data-atv-controller="double_name" 
+      data-atv-double-name-values='{"answer":"My favorite color is yellow!"}'>
+  <button id="config-button2" data-atv_double_name_action="click->reveal">
+    Reveal the mystery answer 2
+  </button>
+  <span id="config-out2" data-atv-double-name-target="output">
+  </span>
+</div>
+
+<div data-atv-controller="a_triple_name" 
+      data-atv-a-triple-name-values='{"answer":"My favorite color is green!"}'>
+  <button id="config-button3" data-atv_a_triple_name_action="click->reveal">
+    Reveal the mystery answer 3
+  </button>
+  <span id="config-out3" data-atv-a-triple-name-target="output">
   </span>
 </div>
