fix some small namespace issues, add tests

--- a/atv-test/app/views/atv/_namespace.html.erb
+++ b/atv-test/app/views/atv/_namespace.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <script type="module">
-  import { activate } from 'atv';
+  import { activate } from '@sbrew.com/atv';
 
   activate("my-atv-");
 </script>
@@ -22,7 +22,7 @@
 </div>
 
 <script type="module">
-  import { activate } from 'atv';
+  import { activate } from '@sbrew.com/atv';
 
   activate("");
 </script>
