--- a/atv-test/app/views/atv/_config.html.erb
+++ b/atv-test/app/views/atv/_config.html.erb
@@ -17,7 +17,7 @@
   </span>
 </div>
 
-<div data-atv-controller="a_triple_name" 
+<div data-atv-controller="a-triple-name" 
       data-atv-a-triple-name-values='{"answer":"My favorite color is green!"}'>
   <button id="config-button3" data-atv_a_triple_name_action="click->reveal">
     Reveal the mystery answer 3
