--- a/atv-test/app/views/atv/_namespace.html.erb
+++ b/atv-test/app/views/atv/_namespace.html.erb
@@ -9,7 +9,7 @@
 <script type="module">
   import { activate } from '@sbrew.com/atv';
 
-  activate("my-atv-");
+  activate("my-atv");
 </script>
 
 
