put console output on a flag

--- a/atv-test/app/views/atv/by_example.html.erb
+++ b/atv-test/app/views/atv/by_example.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div data-atv-report="true" data-my-atv-report="true" data-report="true">
   <%= render partial: "simple" %>
   <%= render partial: "classic" %>
   <%= render partial: "namespace" %> 
