fix bug with camelcase target names, including test

--- a/atv-test/app/views/atv/_inter_controller.html.erb
+++ b/atv-test/app/views/atv/_inter_controller.html.erb
@@ -1,11 +1,11 @@
 
 <div class="product" data-atv-controller="multiplier">
-  <input type="number" value="1" data-atv-multiplier-target="factor"></input> * 
-  <input type="number" value="2" data-atv-multiplier-target="factor"></input>
+  <input type="number" value="1" data-atv-multiplier-target="aFactor"></input> * 
+  <input type="number" value="2" data-atv-multiplier-target="aFactor"></input>
 </div> +
 <div class="product" data-atv-controller="multiplier">
-  <input type="number" value="3" data-atv-multiplier-target="factor"></input> * 
-  <input type="number" value="4" data-atv-multiplier-target="factor"></input>
+  <input type="number" value="3" data-atv-multiplier-target="aFactor"></input> * 
+  <input type="number" value="4" data-atv-multiplier-target="aFactor"></input>
 </div> =
 <div data-atv-controller="adder">
   <span id="inter-out" data-atv-adder-target="sum">0</span>
