--- a/atv-test/app/views/atv/_multi_target.html.erb
+++ b/atv-test/app/views/atv/_multi_target.html.erb
@@ -1,8 +1,8 @@
 
 <div data-atv-controller="multiplier">
-  <input type="number" value="3" data-atv-multiplier-target="factor"></input> * 
-  <input type="number" value="4" data-atv-multiplier-target="factor"></input> * 
-  <input type="number" value="5" data-atv-multiplier-target="factor"></input> = 
+  <input type="number" value="3" data-atv-multiplier-target="aFactor"></input> * 
+  <input type="number" value="4" data-atv-multiplier-target="aFactor"></input> * 
+  <input type="number" value="5" data-atv-multiplier-target="aFactor"></input> = 
   <span id="multiply-out" data-atv-multiplier-target="product">90</span>
   <button id="multiply-button" data-atv-multiplier-action="click->multiply">
     Calculate
