allow two different ways of getting lists of targets

--- a/atv-test/app/views/atv/_multi_target.html.erb
+++ b/atv-test/app/views/atv/_multi_target.html.erb
@@ -8,3 +8,13 @@
     Calculate
   </button>
 </div>
+
+<div data-atv-controller="multiplier-plurals">
+  <input type="number" value="13" data-atv-multiplier-plurals-target="aFactor"></input> * 
+  <input type="number" value="14" data-atv-multiplier-plurals-target="aFactor"></input> * 
+  <input type="number" value="15" data-atv-multiplier-plurals-target="aFactor"></input> = 
+  <span id="multiply2-out" data-atv-multiplier-plurals-target="product">90</span>
+  <button id="multiply2-button" data-atv-multiplier-plurals-action="click->multiply">
+    Calculate
+  </button>
+</div>
