--- a/atv-test/app/views/atv/by_example.html.erb
+++ b/atv-test/app/views/atv/by_example.html.erb
@@ -1,3 +1,4 @@
+<p>ATV v<span id="version"></span></p>
 <div data-atv-report="true" data-my-atv-report="true" data-report="true">
   <%= render partial: "simple" %>
   <%= render partial: "classic" %>
@@ -13,3 +14,8 @@
   <%= render partial: "connecting" %>
   <%= render partial: "disconnecting" %>
 </div>
+
+<script type="module">
+import { version } from "@sbrew.com/atv"
+document.getElementById("version").innerText = version;
+</script>
