--- a/atv-test/app/views/atv/index.html.erb
+++ b/atv-test/app/views/atv/index.html.erb
@@ -1,1 +1,4 @@
-Not here
+<ul>
+<li><%= link_to "Basics", atv_by_example_path %></li>
+<li><%= link_to "Variations", atv_variations_path %></li>
+</ul>
