--- a/atv-test/app/views/atv/_variations.html.erb
+++ b/atv-test/app/views/atv/_variations.html.erb
@@ -6,11 +6,11 @@
     Count 0
   </button>
   Double
-  <button class="multi-button-test multi-button-2" data-atv-multiple-actions='["click", "click->clack"]' style="background-color: green;">
+  <button class="multi-button-test multi-button-2" id="a2" data-atv-multiple-actions='["click", "click->clack"]' style="background-color: green;">
     Count 0
   </button>
   Triple
-  <button class="multi-button-test multi-button-3" data-atv-multiple-actions='["click", "click->clack", "click->clock"]' style="background-color: green;">
+  <button class="multi-button-test multi-button-3" id="a3" data-atv-multiple-actions='["click", "click->clack", "click->clock"]' style="background-color: green;">
     Count 0
   </button>
 </div>
@@ -21,11 +21,11 @@
     Count 0
   </button>
   Double
-  <button class="multi-button-test multi-button-2" data-atv_multiple_actions='"click", "click->clack"' style="background-color: green;">
+  <button class="multi-button-test multi-button-2" id="b2" data-atv_multiple_actions='click, click->clack' style="background-color: green;">
     Count 0
   </button>
   Triple
-  <button class="multi-button-test multi-button-3" data-atv_multiple_actions='"click", "click->clack", "click->clock"' style="background-color: green;">
+  <button class="multi-button-test multi-button-3" id="b3" data-atv_multiple_actions='["click", "click->clack", "click->clock"]' style="background-color: green;">
     Count 0
   </button>
 </div>
@@ -36,11 +36,11 @@
     Count 0
   </button>
   Double
-  <button class="multi-button-test multi-button-2" data-atv_multiple_actions='<%= ["click", "click->clack"].to_json %>' style="background-color: green;">
+  <button class="multi-button-test multi-button-2" id="c2" data-atv_multiple_actions='<%= ["click", "click->clack"].to_json %>' style="background-color: green;">
     Count 0
   </button>
   Triple
-  <button class="multi-button-test multi-button-3" data-atv-multiple-actions='<%= ["click", "click->clack", "click->clock"].to_json %>' style="background-color: green;">
+  <button class="multi-button-test multi-button-3" id="c3" data-atv-multiple-actions='<%= ["click", "click->clack", "click->clock"].to_json %>' style="background-color: green;">
     Count 0
   </button>
 </div>
@@ -51,11 +51,11 @@
     Count 0
   </button>
   Double
-  <button class="multi-button-test multi-button-2" data-atv_actions='<%= ["click->multiple#click", "click->multiple#clack"].to_json %>' style="background-color: green;">
+  <button class="multi-button-test multi-button-2" id="d2" data-atv_actions='<%= ["click->multiple#click", "click->multiple#clack"].to_json %>' style="background-color: green;">
     Count 0
   </button>
   Triple
-  <button class="multi-button-test multi-button-3" data-atv_actions='<%= ["click->multiple#clack", "click->multiple#click", "click->multiple#clock"].to_json %>' style="background-color: green;">
+  <button class="multi-button-test multi-button-3" id="d3" data-atv_actions='<%= ["click->multiple#clack", "click->multiple#click", "click->multiple#clock"].to_json %>' style="background-color: green;">
     Count 0
   </button>
 </div>
@@ -66,11 +66,11 @@
     Count 0
   </button>
   Double
-  <button class="multi-button-test multi-button-2" data-atv-actions='"click->multiple#click", "click->multiple#clack"' style="background-color: green;">
+  <button class="multi-button-test multi-button-2" id="e2" data-atv-actions='["click->multiple#click", "click->multiple#clack"]' style="background-color: green;">
     Count 0
   </button>
   Triple
-  <button class="multi-button-test multi-button-3" data-atv-actions='"click->multiple#clack", "click->multiple#click", "click->multiple#clock"' style="background-color: green;">
+  <button class="multi-button-test multi-button-3" id="e3" data-atv-actions='["click->multiple#clack", "click->multiple#click", "click->multiple#clock"]' style="background-color: green;">
     Count 0
   </button>
 </div>
@@ -81,30 +81,30 @@
     Count 0
   </button>
   Double
-  <button class="multi-button-test multi-button-2" data-atv-actions='click->multiple#click, click->multiple#clack' style="background-color: green;">
+  <button class="multi-button-test multi-button-2" id="f2" data-atv-actions='click->multiple#click, click->multiple#clack' style="background-color: green;">
     Count 0
   </button>
   Triple
-  <button class="multi-button-test multi-button-3" data-atv-actions='click->multiple#clack, click->multiple#click, click->multiple#clock' style="background-color: green;">
+  <button class="multi-button-test multi-button-3" id="f3" data-atv-actions='click->multiple#clack, click->multiple#click, click->multiple#clock' style="background-color: green;">
     Count 0
   </button>
 </div>
 <h1>Rails style 1 - underscores</h1>
 <%= tag.div data: { atv_controller: "multiple" } do %>
   Single
-    <%= tag.button class: "multi-button-test multi-button-1", style:"background-color: green;", data: {
+    <%= tag.button class: "multi-button-test multi-button-1", id: "A1", style:"background-color: green;", data: {
       atv_multiple_action: "click"
   } do %>
     Count 0
   <% end %>
   Double
-  <%= tag.button class: "multi-button-test multi-button-2", style:"background-color: green;", data: {
+  <%= tag.button class: "multi-button-test multi-button-2", id: "A2", style:"background-color: green;", data: {
       atv_multiple_actions: '["click", "click->clack"]'
     } do %>
     Count 0
   <% end %>
   Triple
-  <%= tag.button class: "multi-button-test multi-button-3", style:"background-color: green;", data: {
+  <%= tag.button class: "multi-button-test multi-button-3", id: "A3", style:"background-color: green;", data: {
       atv_multiple_actions: '["click", "click->clack", "click->clock"]'
     } do %> 
     Count 0
@@ -119,13 +119,13 @@
     Count 0
   <% end %>
   Double
-  <%= tag.button class: "multi-button-test multi-button-2", style:"background-color: green;", data: {
+  <%= tag.button class: "multi-button-test multi-button-2", id: "B2", style:"background-color: green;", data: {
       "atv-multiple-actions": ["click", "click->clack"].to_json
     } do %>
     Count 0
   <% end %>
   Triple
-  <%= tag.button class: "multi-button-test multi-button-3", style:"background-color: green;", data: {
+  <%= tag.button class: "multi-button-test multi-button-3", id: "B3", style:"background-color: green;", data: {
       "atv-multiple-actions": ["click", "click->clack", "click->clock"].to_json
     } do %> 
     Count 0
@@ -140,14 +140,14 @@
     Count 0
   <% end %>
   Double
-  <%= tag.button class: "multi-button-test multi-button-2", style:"background-color: green;", data: {
+  <%= tag.button class: "multi-button-test multi-button-2", id: "C2", style:"background-color: green;", data: {
     atv_actions: ["click->multiple#clack", "click->multiple#click"].to_json
     } do %>
     Count 0
   <% end %>
   Triple
-  <%= tag.button class: "multi-button-test multi-button-3", style:"background-color: green;", data: {
-    atv_actions: ["click->multiple#clock", "click->multiple", "click->multiple#clack"].to_json
+  <%= tag.button class: "multi-button-test multi-button-3", id: "C3", style:"background-color: green;", data: {
+    atv_actions: ["click->multiple#clock", "click->multiple#click", "click->multiple#clack"].to_json
     } do %> 
     Count 0
   <% end %>
