major refactor-- started with getting rid of dataset parsing

--- a/atv-test/app/views/atv/_classic.html.erb
+++ b/atv-test/app/views/atv/_classic.html.erb
@@ -5,6 +5,6 @@
   <button id="greet-button" data-atv-hello-action="click->greet">
     Greet
   </button>
-  <span id="greet-out" data-atv-hello-target="output">
+  <span id="greet-out" data-atv-hello-target="output">OUTPUT
   </span>
 </div>
