--- a/atv-test/app/views/atv/_connecting.html.erb
+++ b/atv-test/app/views/atv/_connecting.html.erb
@@ -1,4 +1,4 @@
-
+<p> ATV: </p>
 <div data-atv-controller="connecting">
   <button class="connect-button" data-atv-connecting-action="click" data-atv-connecting-target="state">
     Create 
