--- a/atv-test/app/views/atv/_parameters.html.erb
+++ b/atv-test/app/views/atv/_parameters.html.erb
@@ -1,6 +1,6 @@
 
 <div data-atv-controller="parameters">
-  <button id="e-count" data-atv-parameters-action="click(Count, 2))">
+  <button id="e-count" data-atv-parameters-action="click(Count, 2)">
     Start
   </button>
 </div>
