--- a/atv-test/app/views/atv/variations.html.erb
+++ b/atv-test/app/views/atv/variations.html.erb
@@ -4,6 +4,6 @@
 </div>
 
 <script type="module">
-import { version } from "@sbrew.com/atv"
+import { version } from "@sbrew.com/atv";
 document.getElementById("version").innerText = version;
 </script>
