more tidying in prep for target events

--- a/atv-test/app/views/atv/_simple.html.erb
+++ b/atv-test/app/views/atv/_simple.html.erb
@@ -1,5 +1,5 @@
 
-<div data-atv-controller="simple">
+<div id="simple-controller" data-atv-controller="simple">
   <button id="aCount" data-atv-simple-action="click">
     Count 0
   </button>
