allow multiple targets

--- a/atv-test/app/views/atv/index.html.erb
+++ b/atv-test/app/views/atv/index.html.erb
@@ -12,5 +12,5 @@
   <div id="aaa" data-atv-simple-target="there"></div>
   <div data-atv-simple-target="everywhere"></div>
   <div id="bbb" data-atv-simple-target="there"></div>
-  <div id="ccc" data-atv-simple-target="there"></div>
+  <div id="ccc" data-atv-simple-target="here, there"></div>
 </div>
