get tests working again

--- a/atv-test/app/views/atv/_connecting.html.erb
+++ b/atv-test/app/views/atv/_connecting.html.erb
@@ -3,4 +3,7 @@
   <button class="connect-button" data-atv-connecting-action="click" data-atv-connecting-target="state">
     Create 
   </button>
+  <button class="connect-button-2" data-atv-connecting-target="state">
+    Create 2
+  </button>
 </div>
