more tests for connect/disconnecting targets

--- a/atv-test/app/views/atv/_connecting.html.erb
+++ b/atv-test/app/views/atv/_connecting.html.erb
@@ -7,3 +7,11 @@
     Create 2
   </button>
 </div>
+
+<div id="connect2" data-atv-controller="connecting">
+  Count Is: <span id="multi-count" data-atv-connecting-target="multiCount">1</span>
+  <div id="mm1" class="multi" data-atv-connecting-target="multi">M1</div>
+  <div id="mm2" class="multi"><div data-atv-connecting-target="multi">M2</div></div>
+  <div id="mm3" class="multi" data-atv-connecting-target="multi">M3</div>
+  <div id="mm4" class="multi" data-atv-connecting-target="multi">M4</div>
+</div>
