--- a/atv-test/app/views/atv/_nesting.html.erb
+++ b/atv-test/app/views/atv/_nesting.html.erb
@@ -1,10 +1,10 @@
 
-<div data-atv-controller="nesting">
+<div id="nest1" data-atv-controller="nesting">
   B
   <button id="bCount" data-atv-nesting-action="click">
     Count 0
   </button>
-  <div data-atv-controller="nesting">
+  <div id="nest2" data-atv-controller="nesting">
     C
     <button id="cCount" data-atv-nesting-action="click">
       Count 0
