--- a/atv-test/app/views/atv/index.html.erb
+++ b/atv-test/app/views/atv/index.html.erb
@@ -5,7 +5,7 @@
 </ul>
 
 <div id='simple' data-atv-controller="simple" data-atv-simple-values='"this": "that", "one": "two"' }'>
-  <div data-atv-simple-action="click">CLICKER1</div>
+  <div id="000" data-atv-simple-action="click">CLICKER1</div>
   <div data-atv-simple-actions="clack" data-atv-actions="click->simple#click">FOCUS2</div>
   <div data-atv-action="click->simple#clack">CLICKER3</div>
   <div data-atv-simple-target="here"></div>
