--- a/atv-test/app/views/atv/unit_test.html.erb
+++ b/atv-test/app/views/atv/unit_test.html.erb
@@ -3,10 +3,10 @@
 <h1>Unit Tests</h1>
 
 <script type="module">
-import { version, pascalize, dasherize, allVariants, actionsFor } from "atv-test";
-window.pascalize = pascalize;
-window.dasherize = dasherize;
-window.allVariants = allVariants;
+import { version, actionsFor } from "atv-test";
+// window.pascalize = pascalize;
+// window.dasherize = dasherize;
+// window.allVariants = allVariants;
 window.actionsFor = actionsFor;
 
 document.getElementById("version").innerText = version;
