--- a/atv-test/app/views/atv/_namespace.html.erb
+++ b/atv-test/app/views/atv/_namespace.html.erb
@@ -16,7 +16,7 @@
 </div>
 
 <script type="module">
-  import { activate } from '@sbrew.com/atv';
+  import { activate } from 'atv';
 
   activate("");
   activate("my-atv");
