--- a/atv-test/app/views/atv/by_example.html.erb
+++ b/atv-test/app/views/atv/by_example.html.erb
@@ -17,6 +17,6 @@
 
 
 <script type="module">
-import { version } from "@sbrew.com/atv"
+import { version } from "atv"
 document.getElementById("version").innerText = version;
 </script>
