WIP continue on v0.2

--- a/atv-test/app/views/atv/index.html.erb
+++ b/atv-test/app/views/atv/index.html.erb
@@ -1,3 +1,6 @@
+<h1 data_atv_report="true">
+  ATV 
+</h1>
 <ul>
 <li><%= link_to "Basics", atv_by_example_path %></li>
 <li><%= link_to "Variations", atv_variations_path %></li>
