--- a/atv-test/app/views/layouts/application.html.erb
+++ b/atv-test/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-turbo="false">
+<html data-turbo="true">
   <head>
     <title><%= content_for(:title) || "Atv Test" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
