Fix target management

--- a/atv-test/app/views/atv/_connecting.html.erb
+++ b/atv-test/app/views/atv/_connecting.html.erb
@@ -1,5 +1,5 @@
 <p> ATV: </p>
-<div data-atv-controller="connecting">
+<div id="connect1" data-atv-controller="connecting">
   <button class="connect-button" data-atv-connecting-action="click" data-atv-connecting-target="state">
     Create 
   </button>
