--- a/atv-test/app/views/atv/_disconnecting.html.erb
+++ b/atv-test/app/views/atv/_disconnecting.html.erb
@@ -1,22 +1,25 @@
 
-<%= tag.div(data: {
+<%= tag.div(id: "disconnect-1", data: {
   atv_controller: "disconnecting", 
   atv_disconnecting_values: { spanId: "disconnected-state-2" }.to_json }) do %>
   <button id="disconnect-button-1" data-atv-disconnecting-action="click">
     Disconnect 2
   </button>
+    <span data-atv-disconnecting-target="one">TARGET OF DISCONNECT</span>
+
 <% end %>
 XX
 <span id="disconnected-state-2">
   Not yet connected 2.
 </span>
 
-<%= tag.div(data: {
+<%= tag.div(id: "disconnect-2", data: {
   atv_controller: "disconnecting", 
   atv_disconnecting_values: { spanId: "disconnected-state-1" }.to_json }) do %>
   <button id="disconnect-button-2" data-atv-disconnecting-action="click">
     Disconnect 1
   </button>
+  <span data-atv-disconnecting-target="two">TARGET OF DISCONNECT</span>
 <% end %>
 
 <span id="disconnected-state-1">
