--- a/atv-test/app/views/atv/_simple.html.erb
+++ b/atv-test/app/views/atv/_simple.html.erb
@@ -3,5 +3,5 @@
   <button id="aCount" data-atv-simple-action="click">
     Count 0
   </button>
-  <span data-atv-simple-target="blah">WAS</span>
+  <span data-atv-simple-target="new">WAS</span>
 </div>
